--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>GrowKids</title>
 </head>
 <body>
     <header class="cabecalho" >
-        <nav>
+        <nav class="menu" >
             <a href="#">Conheça o Curso</a>
             <a href="#">Blog</a>
             <a href="#">Empresas Parceiras</a>
@@ -21,16 +21,16 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="section-principal" >
             <h1>GrowKids</h1>
-            <h2>Where your little star illuminates a world of possibilities</h2>
+            <h2>Where your little star illuminates a <br> world of possibilities</h2>
             <div>
                 <img src="" alt="">
             </div>
         </section>
-        <section>
-            <img src="" alt="">
-        </section>
+        <footer>
+            <img src="#" alt="LOGO">
+        </footer>
     </main>
 </body>
 </html>
