projeto figma pronto

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <section class="section-principal" >
             <h1>GrowKids</h1>
             <h2>Where your little star illuminates a <br> world of possibilities</h2>
-            <div>
-                <img src="" alt="">
+            <div class="imagem-do-astronauta" >
+                <img src="Imagens/Screenshot_1.png" alt="Imagem do astronauta">
             </div>
         </section>
         <footer>
-            <img src="#" alt="LOGO">
+            <img class="logo" src="Imagens/logo.png" alt="LOGO">
         </footer>
     </main>
 </body>
