Projeto Figma, mobile finalizado

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>GrowKids</title>
 </head>
 <body>
-    <header class="cabecalho" >
-        <nav class="menu" >
+    <header class="cabecalho">
+        <span class="material-symbols-outlined">menu</span>
+        <span class="material-symbols-outlined">search</span>
+        <nav class="menu">
             <a href="#">Conheça o Curso</a>
             <a href="#">Blog</a>
             <a href="#">Empresas Parceiras</a>
@@ -21,14 +28,14 @@
         </nav>
     </header>
     <main>
-        <section class="section-principal" >
+        <section class="section-principal">
             <h1>GrowKids</h1>
             <h2>Where your little star illuminates a <br> world of possibilities</h2>
             <div class="imagem-do-astronauta" >
                 <img src="Imagens/Screenshot_1.png" alt="Imagem do astronauta">
             </div>
         </section>
-        <footer>
+        <footer class="rodape" >
             <img class="logo" src="Imagens/logo.png" alt="LOGO">
         </footer>
     </main>
