falta desenvolver versao tablet

--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
     </header>
     <main>
         <section class="section-principal">
+            <div>
             <h1>GrowKids</h1>
-            <h2>Where your little star illuminates a <br> world of possibilities</h2>
+            </div>
+            <div>
+                <h2>Where your little star illuminates a <br> world of possibilities</h2>
+            </div>
             <div class="imagem-do-astronauta" >
-                <img src="Imagens/Screenshot_1.png" alt="Imagem do astronauta">
+                <img class="astronauta" src="Imagens/Screenshot_1.png" alt="Imagem do astronauta">
             </div>
         </section>
         <footer class="rodape" >
