--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </head>
 <body>
     <header class="cabecalho">
-        <span class="material-symbols-outlined">menu</span>
-        <span class="material-symbols-outlined">search</span>
+        <span id="menu" class="material-symbols-outlined">menu</span>
+        <span id="search" class="material-symbols-outlined">search</span>
         <nav class="menu">
             <a href="#">Conheça o Curso</a>
             <a href="#">Blog</a>
             <a href="#">Empresas Parceiras</a>
-            <a href="#">ONG´s e comunidade</a>
+            <a id="ong" href="#">ONG´s e comunidade</a>
         </nav>
     </header>
     <main>
