--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 <body>
     <header class="cabecalho">
         <span id="menu" class="material-symbols-outlined">menu</span>
-        <span id="search" class="material-symbols-outlined">search</span>
-        <nav class="menu">
+        <nav id="menunav" class="menu">
             <a href="#">Conheça o Curso</a>
             <a href="#">Blog</a>
             <a href="#">Empresas Parceiras</a>
             <a id="ong" href="#">ONG´s e comunidade</a>
-        </nav>
+          </nav>
     </header>
     <main>
         <section class="section-principal">
@@ -43,6 +42,8 @@
             <img class="logo" src="Imagens/logo.png" alt="LOGO">
         </footer>
     </main>
+<script src="script.js">
+</script>
       
 </body>
 </html>
